tilecache-1.7, Fri, 13 Apr 2007 20:34:42 -0400
 * Apache will sometimes kill TileCache, leaving around locks. If we can't 
   lock for > cache.timeout seconds, throw an exception with the lockname,
   so that users can cleanup. Reported by Brock Anderson, who had stuck locks
   for several days.
 * If ImageLayer base image is transparent, make output Image transparent too.
   Report and patch by Brian Victor.
 * Add support for forcing client to reload on errors, by Suki Hirata.
 * Add support for not caching data which is not images for WMS, with
   original support written by Suki Hirata.
 * Minor fixups to TMS metadata, from Suki Hirata.

tilecache-1.6, Thu Apr  5 19:09:58 EDT 2007
 * Added Python distutils and Debian packaging materials.
 * Added CONTRIBUTORS and EXAMPLES documentation files.

tilecache-1.5, Tue Mar 27 10:17:57 EDT 2007
 * Client.py support reading Layer config from tilecache.cfg, from Hani Howari
 * Added ImageLayer.
 * Support for readonly caches
 * Add utility for cleaning a tilecache DiskCache to a certain size.
 * Minor distribution/documentation changes.

tilecache-1.4, Sat Feb  3 21:56:02 EST 2007
 * Added wsgi handler, from Ehud Shabtai.
 * Added standalone HTTP server, using wsgi handler, from Ehud Shabtai.
 * Added fastcgi implementation, using wsgi handler, from Ehud Shabtai.
 * Improved documentation, including patch from Eric Lemoine.
 * Support for 'maxResolution' layer option.
 * Improved support for running as CGI under IIS, from Suki Hirata.   

tilecache-1.3, Tue Dec  5 23:40:49 EST 2006 
 * Fix metaTile support:
   * Data was offset downwards by metaBuffer pixels.
   * metabuffer and metasize parsing was not working.
 * Add support for palatted transparency when using metaTiling. Patch by 
   Matthew Perry
 * Fix for Windows support: os.rename() won't overwrite files. Patch by Tim
   Schaub 
 * Added 'description' metadata as a layer property. 
 * <Title> and <Abstract> support added to TMS metadata.